eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Tests__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bug_Closure_Data__c</fullName>
        <label>Bug Closure Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bug_Description__c</fullName>
        <label>Bug Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug_ID__c</fullName>
        <label>Bug ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_Open_Date__c</fullName>
        <label>Bug Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bug_Priority__c</fullName>
        <label>Bug Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug_Status__c</fullName>
        <label>Bug Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Completion_Date__c</fullName>
        <label>Planned Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects Name</label>
        <referenceTo>Project_Under_Test__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Description__c</fullName>
        <label>Test Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_ID__c</fullName>
        <label>Test ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Specification__c</fullName>
        <label>Test Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Executed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>FCT - Functional Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REG - Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT - Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXP - Exploratory Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUT - Automation Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF - Performance Test</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <label>Tester</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Tests</label>
    <listViews>
        <fullName>All_Tests</fullName>
        <columns>Projects_Name__c</columns>
        <columns>Test_Type__c</columns>
        <columns>Test_ID__c</columns>
        <columns>NAME</columns>
        <columns>Test_Specification__c</columns>
        <columns>Tester__c</columns>
        <columns>Priority__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Test_Status__c</columns>
        <columns>Bug_ID__c</columns>
        <columns>Bug_Status__c</columns>
        <columns>Bug_Priority__c</columns>
        <columns>Bug_Description__c</columns>
        <columns>Bug_Open_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>